--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
 <script>window.jQuery || document.write("<script src='js/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
-<script type="text/javascript" src="http://cloud.github.com/downloads/malsup/cycle/jquery.cycle.all.latest.js"></script> 
+<script type="text/javascript" src="//malsup.github.io/jquery.cycle.all.js"></script> 
 
 
 <!--script type="text/javascript" src="./js/mylibs/jquery.mousewheel-3.0.4.pack.js"></script-->
