--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
 		  gtag('config', 'G-X8ES9N1KZ3');
 		</script>
+
+	<!-- feroot stage -->
+	<script type="text/javascript" src="https://pg.ferootstage.com/v1/bundle/8882ca10-6a2d-4450-b969-d0af6ec7cbd9"></script>
+
 		
 		
 	</head><body>
